@@ -3399,17 +3399,15 @@ clean0 : force
 # without changing the bytecode format and the tables in
 # constobj.d, constpack.d, constsym.d, subr.d, fsubr.d, pseudofun.d.
 clean1 : clean0
-	-\$(RM) lispbibl.h wlispbibl.h clisp.h *.i *.s *${TOBJ} *.a lisp${LEXE} wlisp${LEXE} clisp-link makevars ${TESTDIR}${NEXT}* ${TESTSDIR}${NEXT}* w${TESTDIR}${NEXT}* w${TESTSDIR}${NEXT}*
+	-\$(RM) lispbibl.h clisp.h *.i *.s *${TOBJ} *.a lisp${LEXE} clisp-link makevars ${TESTDIR}${NEXT}* ${TESTSDIR}${NEXT}*
 	-rmdir ${TESTDIR}
 	-rmdir ${TESTSDIR}
-	-rmdir w${TESTDIR}
-	-rmdir w${TESTSDIR}
 	-\$(RM) README README.de README.es clisp.1 clisp.man clisp.dvi clisp.html impnotes.html clisp.c distmakefile \$(TXTFILES) clreadline.3 clreadline.man clreadline.html clreadline.dvi readline.dvi
 
 # clean2 removes everything that becomes obsolete once lisp${LEXE} is recompiled
 # without changing the bytecode format.
 clean2 : clean1
-	-\$(RM) $interpreted.mem $halfcompiled.mem lispinit.mem lispinit2.mem wlispinit.mem wlispinit2.mem
+	-\$(RM) $interpreted.mem $halfcompiled.mem lispinit.mem lispinit2.mem
 
 # clean3 removes everything that becomes obsolete once lisp${LEXE} is recompiled.
 # It leaves everything generated by "make allc".
