@@ -1,3 +1,7 @@
+1999-05-27  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
+
+        * makemake.in (clean1, clean2): Don't remove wlisp* and wsuite*.
+
 1999-05-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
 
         * makemake.in (sigsegv.h, libsigsegv.a): Generate by calling
